--- a/demo/package.json
+++ b/demo/package.json
@@ -1,20 +1,15 @@
 {
-  "name": "utilities",
-  "version": "1.0.0",
-  "description": "NBS UI Utilities",
-  "main": "common.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://gitlab.com/nbs-it/Utilities.git"
-  },
-  "author": "nbs-it",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://gitlab.com/nbs-it/Utilities/issues"
-  },
-  "homepage": "https://gitlab.com/nbs-it/Utilities#README",
+  "name": "ng6-starter",
+  "version": "0.0.1",
+  "description": "Starter for Angular + ES6 + (Webpack or JSPM)",
+  "main": "index.js",
   "dependencies": {
-    "angular": "^1.6.6"
+    "angular": "^1.6.5",
+    "angular-animate": "^1.6.5",
+    "angular-aria": "^1.6.5",
+    "angular-ui-router": "^1.0.0-beta.1",
+    "jquery": "3.2.1",
+    "normalize.css": "^3.0.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.5.0",
@@ -72,6 +67,17 @@
     "watch": "gulp serve",
     "webpack": "gulp webpack"
   },
+  "keywords": [
+    "angular",
+    "webpack",
+    "es6"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/angularclass/NG6-starter.git"
+  },
+  "author": "AngularClass",
+  "license": "Apache-2.0",
   "babel": {
     "plugins": [
       "transform-runtime"
