--- a/package.json
+++ b/package.json
@@ -5,16 +5,21 @@
   "main": "common.js",
   "repository": {
     "type": "git",
-    "url": "git+https://gitlab.com/nbs-it/ng-ui-library.git"
+    "url": "git+https://gitlab.com/nbs-it/Utilities.git"
   },
   "author": "nbs-it",
   "license": "ISC",
   "bugs": {
-    "url": "https://gitlab.com/nbs-it/ng-ui-library/issues"
+    "url": "https://gitlab.com/nbs-it/Utilities/issues"
   },
-  "homepage": "https://gitlab.com/nbs-it/ng-ui-library#README",
+  "homepage": "https://gitlab.com/nbs-it/Utilities#README",
   "dependencies": {
-    "angular": "^1.6.6"
+    "angular": "^1.6.5",
+    "angular-animate": "^1.6.5",
+    "angular-aria": "^1.6.5",
+    "angular-ui-router": "^1.0.0-beta.1",
+    "jquery": "3.2.1",
+    "normalize.css": "^3.0.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.5.0",
@@ -72,6 +77,17 @@
     "watch": "gulp serve",
     "webpack": "gulp webpack"
   },
+  "keywords": [
+    "angular",
+    "webpack",
+    "es6"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/angularclass/NG6-starter.git"
+  },
+  "author": "AngularClass",
+  "license": "Apache-2.0",
   "babel": {
     "plugins": [
       "transform-runtime"
