--- a/demo/package.json
+++ b/demo/package.json
@@ -7,6 +7,7 @@
     "angular": "^1.6.5",
     "angular-animate": "^1.6.5",
     "angular-aria": "^1.6.5",
+    "angular-sanitize": "^1.6.6",
     "angular-ui-router": "^1.0.0-beta.1",
     "jquery": "3.2.1",
     "normalize.css": "^3.0.3"
