--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "url": "https://gitlab.com/nbs-it/ng-ui-library/issues"
   },
   "homepage": "https://gitlab.com/nbs-it/ng-ui-library#README",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
+    "angular-sanitize": "^1.6.6",
     "angular": "^1.6.6",
     "babel-transform-dir": "^1.0.5",
     "ncp": "^2.0.0",
