--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-ui-library",
-  "version": "1.0.901",
+  "version": "1.0.12",
   "description": "NBS UI library for angular ng6",
   "main": "common.js",
   "repository": {
@@ -15,6 +15,7 @@
   "homepage": "https://gitlab.com/nbs-it/ng-ui-library#README",
   "dependencies": {},
   "devDependencies": {
+    "jquery": "^3.2.1",
     "angular-sanitize": "^1.6.6",
     "angular": "^1.6.6",
     "babel-transform-dir": "^1.0.5",
