--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "url": "https://gitlab.com/nbs-it/ng-ui-library/issues"
   },
   "homepage": "https://gitlab.com/nbs-it/ng-ui-library#README",
-  "dependencies": {},
-  "devDependencies": {
-    "jquery": "^3.2.1",
-    "angular-sanitize": "^1.6.6",
+  "dependencies": {
     "angular": "^1.6.6",
+    "angular-sanitize": "^1.6.6",
+    "jquery": "^3.2.1"
+  },
+  "devDependencies": {
     "babel-transform-dir": "^1.0.5",
     "ncp": "^2.0.0",
     "angular-mocks": "^1.5.0",
