--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-ui-library",
-  "version": "1.0.909",
+  "version": "1.0.910",
   "description": "NBS UI library for angular ng6",
   "main": "common.js",
   "repository": {
@@ -16,7 +16,9 @@
   "dependencies": {
     "angular": "^1.6.6",
     "angular-sanitize": "^1.6.6",
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "moment": "^2.18.1",
+    "hebcal": "^2.2.5"
   },
   "devDependencies": {
     "babel-transform-dir": "^1.0.5",
