--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-ui-library",
-  "version": "1.0.949",
+  "version": "1.0.950",
   "description": "NBS UI library for angular ng6",
   "main": "common.js",
   "repository": {
@@ -15,10 +15,11 @@
   "homepage": "https://gitlab.com/nbs-it/ng-ui-library#README",
   "dependencies": {
     "angular": "^1.6.6",
+    "angular-animate": "^1.6.6",
     "angular-sanitize": "^1.6.6",
+    "hebcal": "^2.2.5",
     "jquery": "^3.2.1",
-    "moment": "^2.18.1",
-    "hebcal": "^2.2.5"
+    "moment": "^2.18.1"
   },
   "devDependencies": {
     "babel-transform-dir": "^1.0.5",
