--- a/demo/package.json
+++ b/demo/package.json
@@ -4,11 +4,11 @@
   "description": "Starter for Angular + ES6 + (Webpack or JSPM)",
   "main": "index.js",
   "dependencies": {
+    "@uirouter/angularjs": "^1.0.18",
     "angular": "^1.6.5",
     "angular-animate": "^1.6.5",
     "angular-aria": "^1.6.5",
     "angular-sanitize": "^1.6.6",
-    "angular-ui-router": "^1.0.0-beta.1",
     "jquery": "3.2.1",
     "normalize.css": "^3.0.3"
   },
