Gitlab ci build public static pages

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,19 @@
-image: alpine:latest
+image: node:8
 
 pages:
   stage: deploy
   script:
-  - mv docs public
+  - cd demo
+  - npm install ng-ui-library@latest
+  - cd client/app
+  - sed -i "6d;13d" app.js
+  - sed -i "8iimport NgUiLibrary from 'ng-ui-library';" app.js
+  - sed -i "13iNgUiLibrary" app.js
+  - cd ../..
+  - npm run build
+  - cd ..
+  - mv demo/dist public
+  - mv demo/client/vendors public
   artifacts:
     paths:
     - public
