Build & Deploy stages

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,21 +1,26 @@
 image: node:8
 
-pages:
-  stage: deploy
+stages:
+  - build
+  - deploy
+
+build-pages:
+  stage: build
   script:
-  - cd demo
-  - npm install ng-ui-library@latest
-  - cd client/app
-  - sed -i "6d;13d" app.js
-  - sed -i "8iimport NgUiLibrary from 'ng-ui-library';" app.js
-  - sed -i "13iNgUiLibrary" app.js
-  - cd ../..
-  - npm run build
-  - cd ..
-  - mv demo/dist public
-  - mv demo/client/vendors public
+    - sh ci/create_client_files.sh
   artifacts:
     paths:
     - public
   only:
-  - master
+    - master
+
+deploy-pages:
+  image: alpine
+  stage: deploy
+  script:
+    - echo 'Nothing to do...'
+  artifacts:
+    paths:
+    - public
+  only:
+    - master
