--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-ui-library",
-  "version": "1.1.11",
+  "version": "1.1.12",
   "description": "NBS UI library for angular ng6",
   "main": "common.js",
   "repository": {
@@ -17,6 +17,7 @@
     "angular": "^1.6.6",
     "angular-animate": "^1.6.6",
     "angular-sanitize": "^1.6.6",
+    "angularjs-slider": "^6.5.1",
     "hebcal": "^2.2.5",
     "jquery": "^3.2.1",
     "moment": "^2.21.0"
