--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "css-loader": "^0.19.0",
     "del": "^2.2.0",
     "file-loader": "0.11.2",
+    "fs-extra": "^6.0.1",
     "fs-walk": "0.0.1",
     "gulp": "^3.9.1",
     "gulp-rename": "^1.2.2",
@@ -54,7 +55,6 @@
     "karma-webpack": "^1.5.1",
     "lodash": "^4.17.10",
     "mocha": "^2.3.0",
-    "ncp": "^2.0.0",
     "ng-annotate-loader": "0.0.10",
     "node-libs-browser": "^0.5.0",
     "node-sass": "^4.9.0",
