--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,9 @@
-image: node:8
+image: node:9-alpine
 
 pages:
   stage: build
   script:
+    - apk -U add nodejs-npm
     - sh ci/create_client_files.sh
   artifacts:
     paths:
